# fmp-rs

./: .dockerignore  .gitignore  .sops.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  dist-workspace.toml  mise.toml  rustfmt.toml
.forgejo/workflows/: ci.yml
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml  container-release.yml  release-cut.yml
.mise/tasks/test/: _default  rust
crates/fmp-cli/: Cargo.toml  README.md
crates/fmp-cli/src/: config.rs  error.rs  main.rs  output.rs
crates/fmp-cli/src/cli/: analyst.rs  bulk.rs  calendar.rs  chart.rs  commodities.rs  company.rs  cot.rs  crypto.rs  dcf.rs  directory.rs  economics.rs  esg.rs  filings.rs  forex.rs  form_13f.rs  fund.rs  fundraisers.rs  government_trading.rs  indexes.rs  insider_trades.rs  market_hours.rs  market_performance.rs  mod.rs  news.rs  quotes.rs  search.rs  statements.rs  technical_indicators.rs  transcript.rs
openspec/changes/archive/2026-04-04-fmp-api-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-chart/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-commodities/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-company/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-cot/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-crypto/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-dcf/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-directory/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-economics/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-esg/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-forex/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-government-trading/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-indexes/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-market-hours/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-market-performance/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-news/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-quotes/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-sec-filings/: spec.md
openspec/changes/archive/2026-04-04-fmp-api-cli/specs/cli-statements/: spec.md
openspec/changes/archive/2026-04-04-full-api-coverage-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-04-full-api-coverage-cli/specs/cli-partial-coverage-gaps/: spec.md
openspec/changes/archive/2026-04-08-bulk-csv-streaming-endpoints/: proposal.md  tasks.md
openspec/changes/archive/2026-04-08-bulk-csv-streaming-endpoints/specs/bulk-csv-streaming/: spec.md
openspec/changes/bulk-csv-streaming-endpoints/: design.md  tasks.md
openspec/changes/bulk-csv-streaming-endpoints/specs/bulk-csv-streaming/: spec.md
openspec/changes/fmp-api-cli/: tasks.md
openspec/changes/fmp-api-cli/specs/cli-analyst/: spec.md
openspec/changes/fmp-api-cli/specs/cli-calendar/: spec.md
openspec/changes/fmp-api-cli/specs/cli-core/: spec.md
openspec/changes/fmp-api-cli/specs/cli-earnings-transcript/: spec.md
openspec/changes/fmp-api-cli/specs/cli-form-13f/: spec.md
openspec/changes/fmp-api-cli/specs/cli-fund/: spec.md
openspec/changes/fmp-api-cli/specs/cli-fundraisers/: spec.md
openspec/changes/fmp-api-cli/specs/cli-insider-trades/: spec.md
openspec/changes/fmp-api-cli/specs/cli-search/: spec.md
openspec/changes/full-api-coverage-cli/specs/cli-fund/: spec.md
openspec/changes/full-api-coverage-cli/specs/cli-fundraisers/: spec.md
openspec/specs/cli-form-13f/: spec.md
openspec/specs/cli-government-trading/: spec.md
openspec/specs/cli-insider-trades/: spec.md
openspec/specs/cli-technical-indicators/: spec.md
scripts/: fetch-fixtures.sh
skill/: SKILL.md
skill/references/: commands.md
skills/fmp/: SKILL.md
skills/fmp/references/: commands.md
src/: client.rs  config.rs  errors.rs  lib.rs  macros.rs  primitives.rs  retry.rs  test_fixtures.rs
src/endpoints/: analyst.rs  bulk.rs  calendar.rs  chart.rs  commodity.rs  company.rs  cot.rs  crypto.rs  dcf.rs  directory.rs  earnings_transcript.rs  economics.rs  esg.rs  forex.rs  form_13f.rs  fund.rs  fundraisers.rs  government_trading.rs  indexes.rs  insider_trades.rs  market_hours.rs  market_performance.rs  mod.rs  news.rs  quotes.rs  search.rs  sec_filings.rs  statements.rs  technical_indicators.rs
src/types/: analyst.rs  bulk.rs  calendar.rs  chart.rs  commodity.rs  company.rs  cot.rs  crypto.rs  dcf.rs  directory.rs  earnings_transcript.rs  economics.rs  esg.rs  forex.rs  form_13f.rs  fund.rs  fundraisers.rs  government_trading.rs  indexes.rs  insider_trades.rs  market_hours.rs  market_performance.rs  mod.rs  news.rs  quotes.rs  search.rs  sec_filings.rs  statements.rs  technical_indicators.rs
tests/: live_api.rs  serde_tests.rs
tests/fixtures/: acquisition_ownership.json  acquisition_ownership.json.xz  adx_indicator.json  adx_indicator.json.xz  aftermarket_quote.json  aftermarket_quote.json.xz  aftermarket_trade.json  aftermarket_trade.json.xz  analyst_estimate.json  analyst_estimate.json.xz  available_countries.json  available_countries.json.xz  available_exchanges.json  available_exchanges.json.xz  available_industries.json  available_industries.json.xz  available_sectors.json  available_sectors.json.xz  balance_sheet.json  balance_sheet.json.xz  balance_sheet_as_reported.json  balance_sheet_as_reported.json.xz  balance_sheet_growth.json  balance_sheet_growth.json.xz  balance_sheet_ttm.json  balance_sheet_ttm.json.xz  biggest_gainers.json  biggest_gainers.json.xz  biggest_losers.json  biggest_losers.json.xz  calendar_earnings.json  calendar_earnings.json.xz  cash_flow.json  cash_flow.json.xz  cash_flow_as_reported.json  cash_flow_as_reported.json.xz  cash_flow_growth.json  cash_flow_growth.json.xz  cash_flow_ttm.json  cash_flow_ttm.json.xz  (+269 more)
