[package]
version = "0.1.4"
name = "fmp"
edition = "2024"
description = "rust bindings for the FMP API"
authors = ["Lbyl Team"]
repository = "https://git.wagyu.icu//lbyl/fmp-rs"
homepage = "https://git.wagyu.icu/lbyl"
publish = ["forgejo"]
keywords = [
]
categories = ["development-tools::debugging", "network-programming", "web-programming"]
readme = "README.md"
license = "none"

[package.metadata.release]
sign-commit = false
tag = false
registry = "forgejo"
# Add [ci skip] to commit messages to prevent CI triggers
pre-release-commit-message = "Release {{version}} [ci skip]"

[dependencies]
eyre = "0.6"
http = "1"
jiff = { version = "0.2.19", features = ["serde", "logging", "static"] }
reqwest = { version = "0.13.2", default-features = false, features = [
  "default-tls",
  "json",
  "stream",
  "http2",
  "charset",
  "brotli",
  "gzip",
  "deflate",
  "zstd",
] }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
reqwest-tracing = { version = "0.7.0", features = ["opentelemetry_0_31"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "2"
tracing = { version = "0.1.44" }
typed-builder = "0.23.2"
serde_urlencoded = "0.7"

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
