[workspace]
resolver = "3"
members = [".", "crates/fmp-cli"]

[workspace.package]
version = "0.1.12"
edition = "2024"
authors = ["Ivan Porto Carrero"]
repository = "https://github.com/casualjim/fmp-rs"
homepage = "https://github.com/casualjim/fmp-rs"
license = "MIT"

[workspace.dependencies]
eyre = "0.6"
http = "1"
jiff = { version = "0.2.19", features = ["serde", "logging", "static"] }
reqwest = { version = "0.13.2", default-features = false, features = [
  "default-tls",
  "json",
  "stream",
  "http2",
  "charset",
  "brotli",
  "gzip",
  "deflate",
  "zstd",
] }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
reqwest-tracing = { version = "0.7.0", features = ["opentelemetry_0_31"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "2"
tracing = { version = "0.1.44" }
typed-builder = "0.23.2"
serde_urlencoded = "0.7"
tokio = { version = "1.42", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
confique = { version = "0.4", features = ["toml"] }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"

[package]
version.workspace = true
name = "fmp"
edition.workspace = true
description = "rust bindings for the FMP API"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = ["gitea"]
keywords = []
categories = ["development-tools::debugging", "network-programming", "web-programming"]
readme = "README.md"
license.workspace = true

[package.metadata.release]
sign-commit = false
sign-tag = false
publish = false
allow-branch = ["main"]
pre-release-commit-message = "chore: Release {{crate_name}} version {{version}}"

[dependencies]
eyre.workspace = true
http.workspace = true
jiff.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
reqwest-tracing.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tracing.workspace = true
typed-builder.workspace = true
serde_urlencoded.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
