[package]
name = "fmp-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for Financial Modeling Prep API"
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fmp"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
confique = { workspace = true }
dirs = "6"
eyre = { workspace = true }
fmp = { path = "../.." }
jiff = { workspace = true }
owo-colors = "4"
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
url = "2"

comfy-table = "7"
csv = "1"
mimalloc = "0.1"
atty = "0.2"

[lints]
workspace = true
