[package]
name = "fmp-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for Financial Modeling Prep API"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.release]
sign-commit = false
sign-tag = false
publish = false
allow-branch = ["main"]
pre-release-commit-message = "chore: Release {{crate_name}} version {{version}}"

[[bin]]
name = "fmp"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
eyre = { workspace = true }
fmp = { path = "../.." }
jiff = { workspace = true }
owo-colors = "4"
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
csv = "1"
futures = "0.3"
serde_json = { workspace = true }
tokio = { workspace = true }
url = "2"

clap_complete = "4"
dirs = "6"
mimalloc = "0.1"
toml = { version = "0.8", default-features = false, features = ["parse"] }
atty = "0.2"

[lints]
workspace = true
